--- a/app/html/index.html
+++ b/app/html/index.html
@@ -24,7 +24,7 @@
         <script src="../js/components/downloader/downloader.js"></script>
         <script src="../js/components/downloader/fetch.js"></script>
         <script src="../js/components/downloader/extractor.js"></script>
-        <script src="../js/components/downloader/add-game.js"></script>
+        <script src="../js/components/downloader/finished.js"></script>
         <!--Updater-->
         <script src="../js/components/updater/updater.js" defer></script>
         <!--Notifications-->
@@ -95,17 +95,17 @@
                         <i class="material-icons mdc-list-item__graphic" aria-hidden="true">shop</i>
                         <span class="mdc-list-item__text">Library</span>
                     </a>
-
-                    <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
-                        <span class="mdc-list-item__ripple"></span>
-                        <i class="material-icons mdc-list-item__graphic" aria-hidden="true">get_app</i>
-                        <span class="mdc-list-item__text">Downloader</span>
-                    </a>
-
+                    
                     <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
                         <span class="mdc-list-item__ripple"></span>
                         <i class="material-icons mdc-list-item__graphic" aria-hidden="true">videogame_asset</i>
                         <span class="mdc-list-item__text">Installed</span>
+                    </a>
+
+                    <a class="mdc-list-item" onclick="goto(this.children[2].textContent)" data-mdc-auto-init="MDCRipple">
+                        <span class="mdc-list-item__ripple"></span>
+                        <i class="material-icons mdc-list-item__graphic" aria-hidden="true">get_app</i>
+                        <span class="mdc-list-item__text">Downloads</span>
                     </a>
 
                     <!--
