--- a/app/html/backup_&_sync.html
+++ b/app/html/backup_&_sync.html
@@ -1,10 +1,10 @@
 <header>
     <link rel="stylesheet" href="../css/backup_&_sync.css" />
-    <script src="../js/backup_&_sync.js"></script>
-
     <link rel="stylesheet" href="../css/card-grid.css" />
-    <script src="../js/components/card-grid/card-builder.js"></script>
-    <script src="../js/components/card-grid/card-grid.js"></script>
+
+    <script defer>
+        $(document).ready(() => mdc.autoInit());
+    </script>
 </header>
 
 <!--Progress bar-->
@@ -79,9 +79,3 @@
     </div>
     <div class="mdc-dialog__scrim"></div>
 </div>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        mdc.autoInit();
-    });
-</script>
