--- a/app/html/downloads.html
+++ b/app/html/downloads.html
@@ -2,13 +2,9 @@
     <link rel="stylesheet" href="../css/downloads.css" />
     <link rel="stylesheet" href="../css/card-grid.css" />
 
-    <script src="../js/downloads.js"></script>
-
-    <script src="../js/components/downloader/downloads/fetching-item.js"></script>
-    <script src="../js/components/downloader/downloads/downloading-item.js"></script>
-    <script src="../js/components/downloader/downloads/extracting-item.js"></script>
-
-    <script src="../js/components/card-grid/card-grid.js"></script>
+    <script defer>
+        $(document).ready(() => mdc.autoInit());
+    </script>
 </head>
 
 <div class="downloads">
@@ -47,9 +43,3 @@
     <div class="mdc-fab__ripple"></div>
     <span class="mdc-fab__icon material-icons">add</span>
 </button>
-
-<script type="text/javascript" defer>
-    $(document).ready(function () {
-        mdc.autoInit();
-    });
-</script>
