Last alpha for the night, please test it out

--- a/app/html/loading.html
+++ b/app/html/loading.html
@@ -5,15 +5,17 @@
         <link rel="stylesheet" href="../css/loading.css" />
     </head>
     <body>
-        <div class="overlay">
-            <p>Vapor Store</p>
-        </div>
-        <div class="ripple">
-            <div class="circle xxlarge shade1"></div>
-            <div class="circle xlarge shade2"></div>
-            <div class="circle xlarge shade3"></div>
-            <div class="circle medium shade4"></div>
-            <div class="circle small shade5"></div>
+        <div class="loading">
+            <div class="overlay">
+                <p>Vapor Store</p>
+            </div>
+            <div class="ripple">
+                <div class="circle xxlarge shade1"></div>
+                <div class="circle xlarge shade2"></div>
+                <div class="circle xlarge shade3"></div>
+                <div class="circle medium shade4"></div>
+                <div class="circle small shade5"></div>
+            </div>
         </div>
     </body>
 </html>
