Some progress on alpha v4, most notible alpha testers get dev logs in console, better logs and new dir verification system

--- a/app/html/index.html
+++ b/app/html/index.html
@@ -18,13 +18,12 @@
 
         <!--Vapor Store Scripts-->
 
+        <!--Material IO-->
+        <script src="../js/dist/material.dev.js" defer></script>
         <!--Initializer-->
         <script src="../js/init.js"></script>
-
         <!--App Functions-->
         <script src="../js/main.js" defer></script>
-        <!--Material IO-->
-        <script src="../js/dist/material.dev.js" async></script>
 
         <!--Root style-->
         <link rel="stylesheet" href="../css/root.css" />
