--- a/site/html/index.html
+++ b/site/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Vapor Store is loading</title>
+        <title>Vapor Store</title>
         <script src="../js/loading.js" defer></script>
         <link rel="stylesheet" href="../scss/loading.scss" />
     </head>
