--- a/site/html/index.html
+++ b/site/html/index.html
@@ -4,11 +4,12 @@
         <title>Vapor Store</title>
         <script src="../js/loading.js" defer></script>
         <link rel="stylesheet" href="../scss/loading.scss" />
+        <link rel="stylesheet" href="../scss/root.scss" />
     </head>
     <body>
         <div class="loading" id="loading">
             <div class="overlay">
-                <p>Vapor Store</p>
+                <h1>Vapor Store</h1>
             </div>
             <div class="ripple">
                 <div class="circle xxlarge shade1"></div>
@@ -21,7 +22,10 @@
 
         <!--Site-->
         <main>
-            <h2>Vapor Store</h2>
+            <div class="title">
+                <h1>Vapor Store</h1>
+                <button>Download</button>
+            </div>
         </main>
     </body>
 </html>
