--- a/site/html/index.html
+++ b/site/html/index.html
@@ -5,6 +5,7 @@
         <script src="../js/loading.js" defer></script>
         <link rel="stylesheet" href="../scss/loading.scss" />
         <link rel="stylesheet" href="../scss/root.scss" />
+        <meta name="viewport" content="width=device-width height=device-height" />
     </head>
     <body>
         <div class="loading" id="loading">
@@ -22,7 +23,18 @@
 
         <!--Site-->
         <main>
-            <div class="title">
+            <nav>
+                <div class="title">
+                    <h2>Vapor Store</h2>
+                </div>
+
+                <div class="links">
+                    <a href="/">Home</a>
+                    <a href="downloads">Downloads</a>
+                </div>
+            </nav>
+
+            <div class="quote">
                 <h1>Vapor Store</h1>
                 <button>Download</button>
             </div>
