--- a/site/html/index.html
+++ b/site/html/index.html
@@ -5,7 +5,7 @@
         <script src="../js/loading.js" defer></script>
         <link rel="stylesheet" href="../scss/loading.scss" />
         <link rel="stylesheet" href="../scss/root.scss" />
-        <meta name="viewport" content="width=device-width height=device-height" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     </head>
     <body>
         <div class="loading" id="loading">
