more mobile friendly and some changes

--- a/site/html/index.html
+++ b/site/html/index.html
@@ -5,6 +5,7 @@
         <script src="../js/loading.js" defer></script>
         <link rel="stylesheet" href="../scss/loading.scss" />
         <link rel="stylesheet" href="../scss/root.scss" />
+        <link rel="shortcut icon" href="https://raw.githubusercontent.com/SushyDev/vapor-store/master/assets/icons/png/icon.png" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     </head>
     <body>
@@ -25,6 +26,7 @@
         <main>
             <nav>
                 <div class="title">
+                    <img src="https://raw.githubusercontent.com/SushyDev/vapor-store/master/assets/icons/png/icon.png" alt="" />
                     <h2>Vapor Store</h2>
                 </div>
 
