--- a/site/html/downloads.html
+++ b/site/html/downloads.html
@@ -27,23 +27,8 @@
             <div class="content">
                 <h1>Downloads</h1>
 
-                <ul class="list" id='download-list'>
-                    <li class="download-item">
-                        <img class="icon" src="https://raw.githubusercontent.com/SushyDev/vapor-store/master/assets/icons/png/icon.png" alt="" />
-                        <div class="info">
-                            <h2>Vapor Store</h2>
-                            <p>v2.0.0-beta-4</p>
-                        </div>
-                        <button>Download</button>
-                    </li>
-                    <li class="download-item">
-                        <img class="icon" src="https://raw.githubusercontent.com/SushyDev/vapor-store/master/assets/icons/png/icon.png" alt="" />
-                        <div class="info">
-                            <h2>Vapor Store</h2>
-                            <p>v2.0.0-beta-4</p>
-                        </div>
-                        <button>Download</button>
-                    </li>
+                <ul class="download-list" id="download-list">
+                  
                 </ul>
             </div>
         </main>
