probably more stuff broken than fixed but changed the storage to a built in one

--- a/app/html/downloads.html
+++ b/app/html/downloads.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="../css/card-grid.css" />
 
     <script defer>
+        vapor.pages.downloads.Initialize();
         $(document).ready(() => mdc.autoInit());
     </script>
 </head>
@@ -26,12 +27,12 @@
             <div class="bottom-row">
                 <div class="game-screenshots" id="game-screenshots"></div>
                 <div class="details">
-                    <div class="" id="age-rating"></div>
-                    <div class="" id="release-date"></div>
-                    <div class="" id="publisher"></div>
-                    <div class="" id="developer"></div>
-                    <div class="" id="platforms"></div>
-                    <div class="" id="genre"></div>
+                    <div id="age-rating"></div>
+                    <div id="release-date"></div>
+                    <div id="publisher"></div>
+                    <div id="developer"></div>
+                    <div id="platforms"></div>
+                    <div id="genre"></div>
                 </div>
             </div>
         </div>
