--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -9,7 +9,7 @@
 
 <div class="searchbar" id="installed-searchbar">
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="searchInstalledGames()">search</button>
-    <input type="text" id="installed-searchquery" placeholder="Search..." />
+    <input type="text" id="installed-searchquery" placeholder="Search... (CTRL + L)" />
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.installed.createCard()">clear</button>
 </div>
 
@@ -49,12 +49,12 @@
     <div class="bottom-row installed">
         <div class="game-screenshots" id="game-screenshots"></div>
         <div class="details">
-            <div class="" id="age-rating"></div>
-            <div class="" id="release-date"></div>
-            <div class="" id="publisher"></div>
-            <div class="" id="developer"></div>
-            <div class="" id="platforms"></div>
-            <div class="" id="genre"></div>
+            <div id="age-rating"></div>
+            <div id="release-date"></div>
+            <div id="publisher"></div>
+            <div id="developer"></div>
+            <div id="platforms"></div>
+            <div id="genre"></div>
         </div>
     </div>
 
