--- a/app/html/library.html
+++ b/app/html/library.html
@@ -9,7 +9,7 @@
 
 <div class="searchbar" id="searchbar">
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="searchGames()">search</button>
-    <input type="text" id="searchquery" placeholder="Search..." />
+    <input type="text" id="searchquery" placeholder="Search... (CTRL + L)" />
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.cards.grid.clearSearch()">clear</button>
 </div>
 
