Small ui changes, improvements to downloader stability / error reporting, new homepage stats and other small changes

--- a/app/html/home.html
+++ b/app/html/home.html
@@ -7,9 +7,65 @@
 </head>
 
 <div class="intro">
-    <h1 class="mdc-typography--headline4">Welcome to Vapor Store</h1>
-    <h1 class="mdc-typography--subtitle1">Be sure to check out our Discord!</h1>
+    <h1 class="mdc-typography--headline2">Welcome to Vapor Store</h1>
+    <h1 class="mdc-typography--headline5">Be sure to check out our Discord!</h1>
 </div>
 
 <!--Div with cards-->
 <div class="cards" id="cards"></div>
+
+<div class="stats">
+    <div class="intro">
+        <h1 class="mdc-typography--headline4">Stats</h1>
+    </div>
+
+    <div class="cards">
+        <!--Installed-->
+        <div class="mdc-card">
+            <div class="mdc-card__primary-action mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple" tabindex="0">
+                <div class="card__primary">
+                    <div class="stat" id="installed-games">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6 stat">1</h2>
+                    </div>
+                    <div class="title">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Games</h2>
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Installed</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Installed -->
+
+        <!-- Loaded -->
+        <div class="mdc-card">
+            <div class="mdc-card__primary-action mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple" tabindex="0">
+                <div class="card__primary">
+                    <div class="stat" id="loaded-games">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6 stat">1</h2>
+                    </div>
+                    <div class="title">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Games</h2>
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Loaded</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Loaded -->
+
+        <!-- repos -->
+        <div class="mdc-card">
+            <div class="mdc-card__primary-action mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple" tabindex="0">
+                <div class="card__primary">
+                    <div class="stat" id="loaded-repositories">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6 stat">1</h2>
+                    </div>
+                    <div class="title">
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Repositories</h2>
+                        <h2 class="card__title mdc-typography mdc-typography--headline6">Loaded</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- repos -->
+    </div>
+</div>
