--- a/app/html/index.html
+++ b/app/html/index.html
@@ -36,7 +36,7 @@
 
     <body>
         <!--Top bar-->
-        <header class="mdc-top-app-bar app-bar" id="app-bar" data-mdc-auto-init="MDCTopAppBar">
+        <header class="mdc-top-app-bar app-bar mdc-top-app-bar--fixed" id="app-bar" data-mdc-auto-init="MDCTopAppBar">
             <div class="mdc-top-app-bar__row">
                 <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
                     <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" data-mdc-auto-init="MDCRipple">menu</button>
