--- a/app/html/library.html
+++ b/app/html/library.html
@@ -8,8 +8,8 @@
 </header>
 
 <div class="searchbar" id="searchbar">
-    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="searchGames()">search</button>
-    <input type="text" id="searchquery" placeholder="Search... (CTRL + L)" />
+    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.library.searchGames()">search</button>
+    <input type="text" id="searchquery" placeholder="Search..." />
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.cards.grid.clearSearch()">clear</button>
 </div>
 
