--- a/app/html/installed.html
+++ b/app/html/installed.html
@@ -8,8 +8,8 @@
 </head>
 
 <div class="searchbar" id="installed-searchbar">
-    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="searchInstalledGames()">search</button>
-    <input type="text" id="installed-searchquery" placeholder="Search... (CTRL + L)" />
+    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.installed.searchInstalledGames()">search</button>
+    <input type="text" id="installed-searchquery" placeholder="Search..." />
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.installed.createCard()">clear</button>
 </div>
 
