--- a/app/html/home.html
+++ b/app/html/home.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="mdc-card__actions">
-            <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" onclick="vapor.nav.visit('https://ko-fi.com/sushy')">
+            <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.home.showChangelog()">
                 <div class="mdc-button__ripple"></div>
                 <span class="mdc-button__label">Changelog</span>
             </button>
