--- a/app/html/index.html
+++ b/app/html/index.html
@@ -13,6 +13,9 @@
         <script src="../libraries/material-components-web.min.js"></script>
         <link rel="stylesheet" href="../libraries/material-compontents-icons.css" />
 
+        <!--Reading MD Files-->
+        <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
+
         <!--Vapor Store Scripts-->
 
         <!--Material IO-->
