--- a/app/html/home.html
+++ b/app/html/home.html
@@ -17,8 +17,7 @@
         <div class="mdc-card__primary-action demo-card__primary-action" data-mdc-auto-init="MDCRipple" tabindex="0">
             <div class="demo-card__primary">
                 <h2 class="demo-card__title mdc-typography mdc-typography--headline6">Welcome to Vapor Store</h2>
-                <h3 class="demo-card__subtitle mdc-typography mdc-typography--subtitle2" id="version"></h3>
-                <span class="demo-card__secondary mdc-typography mdc-typography--body2">This program is still in beta</span>
+                <span class="demo-card__secondary mdc-typography mdc-typography--body2" id="version"></span>
             </div>
         </div>
 
