--- a/app/html/home.html
+++ b/app/html/home.html
@@ -1,7 +1,7 @@
 <head>
     <link rel="stylesheet" href="../css/home.css" />
     <script defer>
-        vapor.pages.home.Initialize();
+        page.home.Initialize();
         $(document).ready(() => mdc.autoInit());
     </script>
 </head>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="mdc-card__actions">
-            <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.home.showChangelog()">
+            <button class="mdc-button mdc-card__action mdc-card__action--button" data-mdc-auto-init="MDCRipple" onclick="page.home.showChangelog()">
                 <div class="mdc-button__ripple"></div>
                 <span class="mdc-button__label">Changelog</span>
             </button>
