--- a/app/html/settings.html
+++ b/app/html/settings.html
@@ -1,7 +1,7 @@
 <header>
     <link rel="stylesheet" href="../css/settings.css" />
     <script defer>
-        vapor.pages.settings.Initialize();
+        page.settings.Initialize();
         $(document).ready(() => mdc.autoInit());
     </script>
 </header>
