--- a/app/html/library.html
+++ b/app/html/library.html
@@ -2,13 +2,13 @@
     <link rel="stylesheet" href="../css/card-grid.css" />
     <link rel="stylesheet" href="../css/library.css" />
     <script defer>
-        vapor.pages.library.Initialize();
+        page.library.Initialize();
         $(document).ready(() => mdc.autoInit());
     </script>
 </header>
 
 <div class="searchbar" id="searchbar">
-    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.pages.library.searchGames()">search</button>
+    <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="page.library.searchGames()">search</button>
     <input type="text" id="searchquery" placeholder="Search..." />
     <button class="mdc-icon-button material-icons" data-mdc-ripple-is-unbounded="true" data-mdc-auto-init="MDCRipple" onclick="vapor.cards.grid.clearSearch()">clear</button>
 </div>
